Add id:helpers to Tree Map

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
             Скрыть меню
           </div>
           <div id="profile-Menu-ep">
-            <%= link_to(image_tag("icons/user.png", :class => "profile-Icon", :size => "16x16", :alt => "Профиль", :align => "left")+ current_user.last_name + " " + current_user.first_name + " " + current_user.patronymic, "/") %>
+            <%= link_to(image_tag("icons/user.png", :class => "profile-Icon", :size => "16x16", :alt => "Профиль", :align => "left")+ current_user.last_name + " " + current_user.first_name + " " + current_user.patronymic, "/u_profile/index") %>
           </div>
         </div>
       </div>
