Tree Map to QParagraph link

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -238,7 +238,7 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 #main { margin: 12px auto 0 auto; width: 940px; }
 
 .description-comment { font-size: 11px; }
-.resID-helpers { font-size: 8px; color: grey; }
+.res-helpers { font-size: 8px; color: grey; }
 
 
 footer .copyright { height: 25px; color: #8279c6; margin: 45px auto 0 auto; width: 940px; font-size: 10px; text-align: center; }
