Styling form interface

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -239,6 +239,10 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 
 .description-comment { font-size: 11px; }
 .res-helpers { font-size: 8px; color: grey; }
+.paragraph-unit { }
+.p-highlight { background-color: #fffff1; }
+
+.input-field { margin: 0 0 0 0; padding: 3px 3px 3px 0; font-size: 13px; border: 1px solid #a1a1a1; }
 
 
 footer .copyright { height: 25px; color: #8279c6; margin: 45px auto 0 auto; width: 940px; font-size: 10px; text-align: center; }
