--- a/app/views/q_relation/new.html.erb
+++ b/app/views/q_relation/new.html.erb
@@ -1,18 +1,23 @@
 <h1>Добавление связи между ресурсами</h1>
 <%= form_tag('create') do -%>
+
     <p>
       <%= label_tag 'ID ресурса-субъекта' %><br />
-      <%= text_field_tag 'idSubject' %>
+      <%= text_field_tag 'idSubject', nil, :class => "input-field" %>
     </p>
+
     <p>
       <%= label_tag 'Тип отношения' %><br />
-      <%= select_tag('rel_type', options_for_select([['Содержит в себе (Contains)', 'contains'], ['Состоит из (Consists Of)', 'consists_of'], ['Необходим для изучения (Need To Learn)', 'need_to_learn'], ['Тип (Is Type)', 'is_type']], 1)) %>
+      <%= select_tag('rel_type', options_for_select([['Содержит в себе (Contains)', 'contains'], ['Состоит из (Consists Of)', 'consists_of'], ['Необходим для изучения (Need To Learn)', 'need_to_learn'], ['Тип (Is Type)', 'is_type']], 1), :class => "input-field") %>
     </p>
+
     <p>
       <%= label_tag 'ID ресурса-объекта' %><br />
-      <%= text_field_tag 'idObject' %>
+      <%= text_field_tag "idObject", nil, :class => "input-field" %>
     </p>
+
     <p>
       <p><%= submit_tag "Сохранить" %></p>
     </p>
+
 <% end -%>
