Styling Paragraph-relation-box interface

--- a/app/views/q_paragraph/show.html.erb
+++ b/app/views/q_paragraph/show.html.erb
@@ -8,12 +8,12 @@
   <div class="q-paragraph-relation-box-title">Смысловые взаимосвязи параграфа:<span class="q-paragraph-relation-box-switcher">Развернуть</span></div>
   <div class="q-paragraph-relation-box-items">
      <% @rel_res["BasedOn"].each do |rel_r| %>
-      <div class="q-paragraph-relation-box-items-relType">Основывается на следующем:</div>
+      <div class="q-paragraph-relation-box-items-relType">Основывается на:</div>
       <span class="res-helpers">[ph:id:<%= rel_r.id %>] </span>
       <%= link_to rel_r.title, q_paragraph_show_path() + "?id=" + rel_r.id %>
   <% end %>
   <% @rel_res["NeedToLearn"].each do |rel_r| %>
-      <div class="q-paragraph-relation-box-items-relType">Необходим для изучения следующего:</div>
+      <div class="q-paragraph-relation-box-items-relType">Необходим для изучения:</div>
       <span class="res-helpers">[ph:id:<%= rel_r.id %>] </span>
       <%= link_to rel_r.title, q_paragraph_show_path() + "?id=" + rel_r.id %>
   <% end %>
