--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -244,11 +244,11 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 .q-paragraph-law { margin: 0 auto; width: 750px; padding: 10px 25px 10px 25px; border: 1px solid #dddcb2; background-color: #fbfacc; font-size: 12px; font-weight: bold; }
 .p-highlight { background-color: #fffff1; }
 
-.q-paragraph-relation-box { padding: 10px; border: 1px solid #e7e7e7; background-color: #f7f7f7; }
+.q-paragraph-relation-box { padding: 10px; border: 1px solid #e6e5ef; background-color: #fbfaff; }
 .q-paragraph-relation-box-title { color: #4b0b6c; font-size: 13px; font-weight: bold; }
 .q-paragraph-relation-box-switcher { margin-left: 605px; color: #8279c6; font-size: 10px; font-weight: normal; text-decoration: none; border-bottom: 1px dotted; cursor: pointer; }
-.q-paragraph-relation-box-items { display: none; margin-top: 20px;}
-.q-paragraph-relation-box-items-relType { font-size: 11px; font-weight: bold; margin-bottom: 5px; }
+.q-paragraph-relation-box-items { display: none; }
+.q-paragraph-relation-box-items-relType { margin-top: 20px; font-size: 11px; font-weight: bold; margin-bottom: 5px; }
 
 .input-field { margin: 0 0 0 0; padding: 3px 3px 3px 0; font-size: 13px; border: 1px solid #a1a1a1; }
 
