--- a/app/views/q_resources/_form.html.erb
+++ b/app/views/q_resources/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :note %><br />
     <%= f.text_field :note %>
   </div>
+  <div class="field">
+    <%= f.label :isource %><br />
+    <%= f.text_field :isource %>
+  </div>
   <div class="actions">
     <p><%= f.submit %></p>
   </div>
