--- a/app/views/q_resources/index.html.erb
+++ b/app/views/q_resources/index.html.erb
@@ -6,9 +6,10 @@
     <th>Title</th>
     <th>Description</th>
     <th>Body</th>
-    <th>Position</th>
+    <th>P</th>
     <th>Url</th>
     <th>Note</th>
+    <th>Information source</th>
     <th></th>
     <th></th>
     <th></th>
@@ -23,6 +24,7 @@
     <td><%= q_resource.position %></td>
     <td><%= q_resource.url %></td>
     <td><%= q_resource.note %></td>
+    <td><%= q_resource.isource %></td>
     <td><%= link_to 'Показать', q_resource %></td>
     <td><%= link_to 'Редактировать', edit_q_resource_path(q_resource) %></td>
     <td><%= link_to 'Удалить', q_resource, :confirm => 'Вы уверены?', :method => :delete %></td>
