--- a/app/views/q_resources/show.html.erb
+++ b/app/views/q_resources/show.html.erb
@@ -35,6 +35,10 @@
   <%= @q_resource.note %>
 </p>
 
+<p>
+  <b>Information source:</b>
+  <%= @q_resource.isource %>
+</p>
 
 <%= link_to 'Edit', edit_q_resource_path(@q_resource) %> |
 <%= link_to 'Back', q_resources_path %>
