--- a/app/views/q_resources/_form.html.erb
+++ b/app/views/q_resources/_form.html.erb
@@ -53,7 +53,7 @@
       <%= f.file_field :bfile %>
       <label>
         <%= f.check_box :remove_bfile %>
-        Remove avatar
+        Remove bfile
       </label>
     </div>
 
