--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -203,7 +203,7 @@ table { border-collapse: collapse; border-spacing: 0; }
    ========================================================================== */
 h1 { color: #4b0b6c; font-size: 24px; }
 h2 { color: #4b0b6c; font-size: 18px; }
-h3 { color: #4b0b6c; font-size: 15px; }
+h3 { color: #4b0b6c; font-size: 15px; margin-top: 25px; }
 h4 { color: #4b0b6c; font-size: 13px; margin-bottom: 5px; }
    
 header .index-Panel { position: relative; z-index: 1000; color: white; background: image_url("header/index_panel/ipbg.png") repeat-x; width: 100%; height: 63px;}
@@ -241,7 +241,15 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 
 .description-comment { font-size: 11px; }
 .res-helpers { font-size: 8px; font-weight: normal; color: grey; }
+
 .pr-helpers { font-size: 10px; color: grey; }
+.pr-helpers a { font-size: 10px; color: grey; }
+.pr-helpers a:hover { font-size: 10px; color: #671293; }
+
+.tree-helpers { font-size: 10px; color: grey; margin-top: -7px; }
+.tree-helpers a { font-size: 10px; color: grey; }
+.tree-helpers a:hover { font-size: 10px; color: #671293; }
+
 .q-paragraph-unit { }
 .q-paragraph-law { margin: 0 auto; width: 750px; padding: 10px 25px 10px 25px; border: 1px solid #dddcb2; background-color: #fbfacc; font-size: 12px; font-weight: bold; }
 .p-highlight { background-color: #fffff1; }
@@ -250,6 +258,7 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 .q-paragraph-relation-box-title { color: #4b0b6c; font-size: 13px; font-weight: bold; cursor: pointer; }
 .q-paragraph-relation-box-switcher { margin-left: 605px; color: #8279c6; font-size: 10px; font-weight: normal; text-decoration: none; border-bottom: 1px dotted; cursor: pointer; }
 .q-paragraph-relation-box-items { display: none; }
+.q-paragraph-relation-box-items-raw { margin-bottom: 7px; }
 .q-paragraph-relation-box-items-relType { margin-top: 20px; font-size: 11px; font-weight: bold; margin-bottom: 5px; }
 
 .q-problem-body { padding: 10px; border: 1px solid #edecd2; background-color: #ffffec; }
