--- a/app/views/q_paragraph/show.html.erb
+++ b/app/views/q_paragraph/show.html.erb
@@ -7,16 +7,24 @@
 <div class="q-paragraph-relation-box">
   <div class="q-paragraph-relation-box-title">Смысловые взаимосвязи параграфа:<span class="q-paragraph-relation-box-switcher">Развернуть</span></div>
   <div class="q-paragraph-relation-box-items">
-     <% @rel_res["BasedOn"].each do |rel_r| %>
-      <div class="q-paragraph-relation-box-items-relType">Основывается на:</div>
-      <span class="res-helpers">[ph:id:<%= rel_r.id %>] </span>
-      <%= link_to rel_r.title, q_paragraph_show_path() + "?id=" + rel_r.id %>
-  <% end %>
-  <% @rel_res["NeedToLearn"].each do |rel_r| %>
-      <div class="q-paragraph-relation-box-items-relType">Необходим для изучения:</div>
-      <span class="res-helpers">[ph:id:<%= rel_r.id %>] </span>
-      <%= link_to rel_r.title, q_paragraph_show_path() + "?id=" + rel_r.id %>
-  <% end %>
+    <% if @rel_res["BasedOn"] && !@rel_res["BasedOn"].empty? %>
+        <div class="q-paragraph-relation-box-items-relType">Основывается на:</div>
+        <% @rel_res["BasedOn"].each do |rel_r| %>
+            <div class="q-paragraph-relation-box-items-raw">
+              <span class="res-helpers">[ph:id:<%= rel_r.id %>] </span>
+              <%= link_to rel_r.title, q_paragraph_show_path() + "?id=" + rel_r.id %>
+            </div>
+        <% end %>
+    <% end %>
+    <% if @rel_res["NeedToLearn"] && !@rel_res["NeedToLearn"].empty? %>
+        <div class="q-paragraph-relation-box-items-relType">Необходим для изучения:</div>
+        <% @rel_res["NeedToLearn"].each do |rel_r| %>
+            <div class="q-paragraph-relation-box-items-raw">
+              <span class="res-helpers">[ph:id:<%= rel_r.id %>] </span>
+              <%= link_to rel_r.title, q_paragraph_show_path() + "?id=" + rel_r.id %>
+            </div>
+        <% end %>
+    <% end %>
   </div>
 </div>
 
