One level paragraph's blocks render via render_paragraph_block helper.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -239,6 +239,8 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 
 #main { margin: 12px auto 0 auto; width: 940px; }
 
+.dotted-link { border-bottom: 1px dotted;}
+
 .description-comment { font-size: 11px; }
 .res-helpers { font-size: 8px; font-weight: normal; color: grey; }
 
