Start support to track&map

--- a/app/views/q_map/track.html.erb
+++ b/app/views/q_map/track.html.erb
@@ -1,2 +1,3 @@
-<h1>QMap#track</h1>
-<p>Find me in app/views/q_map/track.html.erb</p>
+<h1>Траектория</h1>
+<p>Трассировка траектории изучения дидактической единицы</p>
+<%=raw render_simple_map(@root) %>
