--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="third-Panel">
-      <div class="tp-Content add-Res-SubMenu">
+      <div id="sub-Menu" class="tp-Content add-Res-SubMenu">
         <div class="limiter">
           └
         </div>
