--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -248,12 +248,13 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 .pr-helpers a { font-size: 10px; color: grey; }
 .pr-helpers a:hover { font-size: 10px; color: #671293; }
 
-.tree-helpers { font-size: 10px; color: grey; margin-top: -7px; }
+.tree-helpers { font-size: 10px; font-weight: normal; color: grey; margin-top: -7px; }
 .tree-helpers a { font-size: 10px; color: grey; }
 .tree-helpers a:hover { font-size: 10px; color: #671293; }
 
 .q-paragraph-unit { }
 .q-paragraph-law { margin: 0 auto; width: 750px; padding: 10px 25px 10px 25px; border: 1px solid #dddcb2; background-color: #fbfacc; font-size: 12px; font-weight: bold; }
+.q-paragraph-definition { margin: 0 auto; width: 750px; padding: 10px 25px 10px 25px; border: 1px solid #b2ddbd; background-color: #ccfbda; font-size: 12px; font-weight: bold; }
 .p-highlight { background-color: #fffff1; }
 
 .q-paragraph-relation-box { padding: 10px; border: 1px solid #e6e5ef; background-color: #fbfaff; }
@@ -263,6 +264,12 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 .q-paragraph-relation-box-items { display: none; }
 .q-paragraph-relation-box-items-raw { margin-bottom: 7px; }
 .q-paragraph-relation-box-items-relType { margin-top: 20px; font-size: 11px; font-weight: bold; margin-bottom: 5px; }
+
+.margin-top-15 { margin-top: 15px; }
+.q-paragraph-relation-res-line { width: 100%; height: 1px; background-color: #e6e5ef; }
+.q-paragraph-relation-res-items-box { padding: 7px 10px 7px 10px; font-size: 11px; font-weight: bold; }
+.q-paragraph-relation-res-item { float: left; margin-right: 15px; }
+.q-paragraph-relation-res-icon { float: left; margin-right: 5px; }
 
 .q-problem-body { padding: 10px; border: 1px solid #edecd2; background-color: #ffffec; }
 .q-problem-notice { font-size: 11px; margin-top: -4px; }
