Prepare to add refers problem to paragraph

--- a/app/views/q_relation/new.html.erb
+++ b/app/views/q_relation/new.html.erb
@@ -12,6 +12,7 @@
                                                      ['Состоит из (Consists Of)', 'consists_of'],
                                                      ['Необходим для изучения (Need To Learn)', 'need_to_learn'],
                                                      ['Тип (Is Type)', 'is_type'],
+                                                     ['Относится к (Refers To)', 'refers_to'],
                                                      ['Прикрепляет к себе (Hold On)', 'hold_on'],
                                                      ['Имеет ответ (Has Answer)', 'has_answer'],
                                                      ['Имеет решение (Has Solution)', 'has_solution'],
