--- a/app/views/q_resources/_form.html.erb
+++ b/app/views/q_resources/_form.html.erb
@@ -33,6 +33,11 @@
     </div>
 
     <div class="field">
+      <%= f.label :weight %><br />
+      <%= f.number_field :weight %>
+    </div>
+
+    <div class="field">
       <%= f.label :url %><br />
       <%= f.text_field :url %>
     </div>
