--- a/app/views/q_resources/index.html.erb
+++ b/app/views/q_resources/index.html.erb
@@ -7,6 +7,7 @@
     <th>Description</th>
     <th>Body</th>
     <th>P</th>
+    <th>W</th>
     <th></th>
     <th></th>
     <th></th>
@@ -19,6 +20,7 @@
     <td><%= q_resource.description %></td>
     <td><%= q_resource.body %></td>
     <td><%= q_resource.position %></td>
+    <td><%= q_resource.weight %></td>
     <td><%= link_to 'Показать', q_resource %></td>
     <td><%= link_to 'Редактировать', edit_q_resource_path(q_resource) %></td>
     <td><%= link_to 'Удалить', q_resource, :confirm => 'Вы уверены?', :method => :delete %></td>
