--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -271,6 +271,8 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 .q-paragraph-relation-res-item { float: left; margin-right: 15px; }
 .q-paragraph-relation-res-icon { float: left; margin-right: 5px; }
 
+.q-problem-medal-icon { margin-right: 5px; }
+
 .q-problem-body { padding: 10px; border: 1px solid #edecd2; background-color: #ffffec; }
 .q-problem-notice { font-size: 11px; margin-top: -4px; }
 
