--- a/app/views/q_problem/index.html.erb
+++ b/app/views/q_problem/index.html.erb
@@ -1,3 +1,9 @@
-<h1>QProblem#index</h1>
-<p>Find me in app/views/q_problem/index.html.erb</p>
-<%= params[:root_id] %>
+<h1>Упражнения (<%= @p_ref_d_right.count %>/<%= @p_ref_d.count %>)</h1>
+<%=raw '<p class="tree-helpers">Относятся к дидактической единице, ID: ' + params[:root_id] + '</p>' %>
+<% @p_ref_d.each_with_index do |prd, index| %>
+    <p>
+      <span class="res-helpers"><%= index+1 %>.&nbsp;</span>
+      <span class="res-helpers">[id:<%= prd.first[1].id %>] </span>
+      <%= link_to QResource.find(prd.first[1].id).title, QResource.find(prd.first[1].id).id %>
+    </p>
+<% end %>
