--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -259,11 +259,16 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 
 .q-paragraph-relation-box { padding: 10px; border: 1px solid #e6e5ef; background-color: #fbfaff; }
 .q-paragraph-relation-box-title { color: #4b0b6c; font-size: 13px; font-weight: bold; cursor: pointer; }
-.q-paragraph-relation-box-switcher { margin-left: 587px; color: #8279c6; font-size: 10px; font-weight: normal; text-decoration: none; border-bottom: 1px dotted; cursor: pointer; }
-.q-paragraph-relation-box-switcher-icon { margin-right: 4px; }
+.q-paragraph-relation-box-switcher { margin-left: 584px; color: #8279c6; font-size: 10px; font-weight: normal; text-decoration: none; border-bottom: 1px dotted; cursor: pointer; }
+.q-paragraph-relation-box-switcher-icon { margin-right: 7px; }
 .q-paragraph-relation-box-items { display: none; }
 .q-paragraph-relation-box-items-raw { margin-bottom: 7px; }
 .q-paragraph-relation-box-items-relType { margin-top: 20px; font-size: 11px; font-weight: bold; margin-bottom: 5px; }
+
+.q-paragraph-knw-level-box { margin-top: 15px; padding: 10px; border: 1px solid #e6e5ef; background-color: #fbfaff; }
+.q-paragraph-knw-level-box-title { color: #4b0b6c; font-size: 13px; font-weight: bold; cursor: pointer; }
+.q-paragraph-knw-level-box-switcher { margin-left: 630px; color: #8279c6; font-size: 10px; font-weight: normal; text-decoration: none; border-bottom: 1px dotted; cursor: pointer; }
+.q-paragraph-knw-level-box-items { display: none; margin-top: 20px; }
 
 .margin-top-15 { margin-top: 15px; }
 .q-paragraph-relation-res-line { width: 100%; height: 1px; background-color: #e6e5ef; }
