Added calculating sum and average point.

--- a/app/views/q_paragraph/show.html.erb
+++ b/app/views/q_paragraph/show.html.erb
@@ -42,7 +42,8 @@
     <span class="q-paragraph-knw-level-box-switcher">Развернуть</span>
   </div>
   <div class="q-paragraph-knw-level-box-items">
-    sdfsdfsdf
+    <div class="q-paragraph-knw-level-box-item-line">Сумма баллов, полученных за решение задач = <%= @sum %></div>
+    <div class="q-paragraph-knw-level-box-item-line">Средний балл за решение задач = <%= @sum/@problems_all_right.count.to_f %></div>
   </div>
 </div>
 
@@ -57,11 +58,11 @@
   </div>
   <div class="q-paragraph-relation-res-item">
     <span class="tree-helpers">2. </span><a href="#">Примеры решения задач</a>
-    (7)
+    (N/A)
   </div>
   <div class="q-paragraph-relation-res-item">
     <span class="tree-helpers">3. </span><a href="#">Файлы</a>
-    (5)
+    (N/A)
   </div>
 </div>
 <div class="q-paragraph-relation-res-line margin-top-15"></div>
