--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -283,6 +283,10 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 .q-problem-notice { font-size: 11px; margin-top: -4px; }
 .q-problem-tick-div { float:left; margin-right: 10px; }
 
+.tree-map-discipline-block { float: left; margin: 7px; width: 275px; height: 145px; padding: 10px; border: 1px solid #e6e5ef; background-color: #fbfaff; text-align: center; cursor: pointer; }
+
+.clear-both { clear: both; }
+
 .input-field { margin: 0 0 0 0; padding: 3px 3px 3px 0; font-size: 13px; border: 1px solid #a1a1a1; }
 
 
