--- a/app/views/q_relation/index.html.erb
+++ b/app/views/q_relation/index.html.erb
@@ -1,2 +1,14 @@
 <h1>QRelation#index</h1>
 <p>Find me in app/views/q_relation/index.html.erb</p>
+<a href="google.ru" id="link_id">sdfsdfsdf</a>
+<div class="tree-map-discipline-block">1</div>
+
+<div class="tree-map-discipline-block">2</div>
+<div class="tree-map-discipline-block">3</div>
+<div class="tree-map-discipline-block">4</div>
+<div class="tree-map-discipline-block">5</div>
+<div class="tree-map-discipline-block">6</div>
+<div class="tree-map-discipline-block">7</div>
+<div class="tree-map-discipline-block">8</div>
+<div class="tree-map-discipline-block">9</div>
+<div class="clear-both"></div>
