--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -272,6 +272,7 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 .q-paragraph-knw-level-box-item-line { margin-top: 20px; }
 
 .margin-top-15 { margin-top: 15px; }
+.margin-bottom-17 { margin-bottom: 17px; }
 .q-paragraph-relation-res-line { width: 100%; height: 1px; background-color: #e6e5ef; }
 .q-paragraph-relation-res-items-box { padding: 7px 10px 7px 10px; font-size: 11px; font-weight: bold; }
 .q-paragraph-relation-res-item { float: left; margin-right: 15px; }
