--- a/app/views/q_map/index.html.erb
+++ b/app/views/q_map/index.html.erb
@@ -1,3 +1,4 @@
 <h1>QMap#index</h1>
 <p>Find me in app/views/q_map/index.html.erb</p>
-<%= average_points(210) %>
+Сумма баллов: <%= sum_points(2) %><br />
+Средний балл: <%= average_points(2) %>
